# fastapi-recipes-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/application/exceptions/: author_exceptions.py  ingredient_exceptions.py  recipe_exceptions.py
app/application/services/: author_service.py  ingredient_service.py  recipe_service.py
app/domain/models/: __init__.py  author.py  ingredient.py  recipe.py  recipe_ingredient.py
app/domain/schemas/: author.py  ingredient.py  recipe.py  recipe_ingredient.py
app/persistence/: db.py
app/persistence/repositories/: author_repository.py  ingredient_repository.py  recipe_repository.py
app/presentation/routes/: author_routes.py  ingredients_routes.py  recipe_routes.py  system.py
docs/: database_schema.mmd  notify_recipe_email_sequence.mmd
frontend/: Dockerfile  README.md  package-lock.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: recipeApi.js
frontend/src/components/RecipeForm/: IngredientField.jsx  RecipeForm.jsx
frontend/src/components/RecipeList/: RecipeList.jsx
scripts/: init_db.py  seed_data.py
